--- a/WPFfirstApp/WPFfirstApp/MainWindow.xaml
+++ b/WPFfirstApp/WPFfirstApp/MainWindow.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFfirstApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <Button x:Name="btn_add" Content="Add" HorizontalAlignment="Center" Margin="0,174,0,0" VerticalAlignment="Top" Height="77" Width="126" Click="btn_add_Click"/>
     </Grid>
+
+
 </Window>
