--- a/database/database/Buttons.xaml
+++ b/database/database/Buttons.xaml
@@ -2,7 +2,8 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="{x:Type Button}"
            x:Key="{x:Type Button}">
-        <Setter Property="Background" Value="#FF087368"/>
+        <Setter Property="Background" Value="#FF5E5E5E"/>
         <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontSize" Value="15"/>
     </Style>
 </ResourceDictionary>
