--- a/database/database/Registration.xaml
+++ b/database/database/Registration.xaml
@@ -30,7 +30,7 @@
             <TextBox x:Name="txt_phone" HorizontalAlignment="Left" Margin="218,377,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
             <TextBox x:Name="txt_age" HorizontalAlignment="Left" Margin="218,309,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
             <DatePicker x:Name="picker_dob" HorizontalAlignment="Left" Margin="218,251,0,0" VerticalAlignment="Top" Width="150" SelectedDateFormat="Short"/>
-            <Button Name="btn_save" Content="Save" HorizontalAlignment="Left" Margin="48,460,0,0" VerticalAlignment="Top" Height="70" Width="96"/>
+            <Button Name="btn_save" Content="Save" HorizontalAlignment="Left" Margin="48,460,0,0" VerticalAlignment="Top" Height="70" Width="96" Click="btn_save_Click"/>
             <Button Name="btn_clear" Content="Clear" HorizontalAlignment="Left" Margin="242,460,0,0" VerticalAlignment="Top" Height="70" Width="96"/>
             <Button Name="btn_exit" Content="Exit" HorizontalAlignment="Left" Margin="475,460,0,0" VerticalAlignment="Top" Height="70" Width="96"/>
 
