adding functionality to updateview

--- a/database/database/Registration.xaml
+++ b/database/database/Registration.xaml
@@ -15,8 +15,6 @@
         <Label Content="Client DOB" HorizontalAlignment="Left" Margin="48,251,0,0" VerticalAlignment="Top"/>
         <Label Content="Client Age" HorizontalAlignment="Left" Margin="48,305,0,0" VerticalAlignment="Top"/>
         <Label Content="Client Phone Number" HorizontalAlignment="Left" Margin="48,364,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Margin="218,61,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Margin="218,127,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
         <Grid>
             <Label Content="Client ID" HorizontalAlignment="Left" Margin="48,57,0,0" VerticalAlignment="Top"/>
             <Label Content="Client Name" HorizontalAlignment="Left" Margin="48,123,0,0" VerticalAlignment="Top"/>
@@ -28,8 +26,8 @@
             <TextBox x:Name="txt_name" HorizontalAlignment="Left" Margin="218,127,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
             <TextBox x:Name="txt_address" HorizontalAlignment="Left" Margin="218,195,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
             <TextBox x:Name="txt_phone" HorizontalAlignment="Left" Margin="218,377,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-            <TextBox x:Name="txt_age" HorizontalAlignment="Left" Margin="218,309,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-            <DatePicker x:Name="picker_dob" HorizontalAlignment="Left" Margin="218,251,0,0" VerticalAlignment="Top" Width="150" SelectedDateFormat="Short"/>
+            <TextBox x:Name="txt_age" HorizontalAlignment="Left" Margin="218,309,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" IsHitTestVisible="False"/>
+            <DatePicker x:Name="picker_dob" HorizontalAlignment="Left" Margin="218,251,0,0" VerticalAlignment="Top" Width="150" SelectedDateFormat="Short" SelectedDateChanged="picker_dob_SelectedDateChanged"/>
             <Button Name="btn_save" Content="Save" HorizontalAlignment="Left" Margin="48,460,0,0" VerticalAlignment="Top" Height="70" Width="96" Click="btn_save_Click"/>
             <Button Name="btn_clear" Content="Clear" HorizontalAlignment="Left" Margin="242,460,0,0" VerticalAlignment="Top" Height="70" Width="96"/>
             <Button Name="btn_exit" Content="Exit" HorizontalAlignment="Left" Margin="475,460,0,0" VerticalAlignment="Top" Height="70" Width="96"/>
