--- a/database/database/Update.xaml
+++ b/database/database/Update.xaml
@@ -5,9 +5,35 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:database"
         mc:Ignorable="d"
-        Title="Update" Height="450" Width="800"
+        Title="Update" Height="650" Width="671"
         Name="UpdateClient">
     <Grid>
+        <Label Content="Client ID" HorizontalAlignment="Left" Margin="48,57,0,0" VerticalAlignment="Top"/>
+        <Label Content="Client Name" HorizontalAlignment="Left" Margin="48,123,0,0" VerticalAlignment="Top"/>
+        <Label Content="Client Address" HorizontalAlignment="Left" Margin="48,191,0,0" VerticalAlignment="Top"/>
+        <Label Content="Client DOB" HorizontalAlignment="Left" Margin="48,251,0,0" VerticalAlignment="Top"/>
+        <Label Content="Client Age" HorizontalAlignment="Left" Margin="48,305,0,0" VerticalAlignment="Top"/>
+        <Label Content="Client Phone Number" HorizontalAlignment="Left" Margin="48,364,0,0" VerticalAlignment="Top"/>
         
+        <Grid Margin="0,0,100,0">
+            <Label Content="Client ID" HorizontalAlignment="Left" Margin="48,57,0,0" VerticalAlignment="Top"/>
+            <Label Content="Client Name" HorizontalAlignment="Left" Margin="48,123,0,0" VerticalAlignment="Top"/>
+            <Label Content="Client Address" HorizontalAlignment="Left" Margin="48,191,0,0" VerticalAlignment="Top"/>
+            <Label Content="Client DOB" HorizontalAlignment="Left" Margin="48,251,0,0" VerticalAlignment="Top"/>
+            <Label Content="Client Age" HorizontalAlignment="Left" Margin="48,305,0,0" VerticalAlignment="Top"/>
+            <Label Content="Client Phone Number" HorizontalAlignment="Left" Margin="48,364,0,0" VerticalAlignment="Top"/>
+            <TextBox x:Name="txt_id" HorizontalAlignment="Left" Margin="218,61,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+            <TextBox x:Name="txt_name" HorizontalAlignment="Left" Margin="218,127,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+            <TextBox x:Name="txt_address" HorizontalAlignment="Left" Margin="218,195,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+            <TextBox x:Name="txt_phone" HorizontalAlignment="Left" Margin="218,377,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+            <TextBox x:Name="txt_age" HorizontalAlignment="Left" Margin="218,309,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" IsHitTestVisible="False"/>
+            <DatePicker x:Name="picker_dob" HorizontalAlignment="Left" Margin="218,251,0,0" VerticalAlignment="Top" Width="150" SelectedDateFormat="Short" SelectedDateChanged="picker_dob_SelectedDateChanged"/>
+            <Button x:Name="btn_update" Content="Update" HorizontalAlignment="Left" Margin="48,460,0,0" VerticalAlignment="Top" Height="70" Width="96" Click="btn_update_Click"/>
+            <Button x:Name="btn_clear" Content="Clear" HorizontalAlignment="Left" Margin="242,460,0,0" VerticalAlignment="Top" Height="70" Width="96"/>
+            <Button x:Name="btn_exit" Content="Exit" HorizontalAlignment="Left" Margin="442,460,0,0" VerticalAlignment="Top" Height="70" Width="96"/>
+
+
+        </Grid>
+
     </Grid>
 </Window>
