--- a/database/database/Display.xaml
+++ b/database/database/Display.xaml
@@ -8,6 +8,8 @@
         Title="Display" Height="450" Width="800"
         x:Name="DisplayView">
     <Grid>
-        
+        <DataGrid x:Name="datagrid_client" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="0,0,0,128"/>
+        <Button x:Name="btn_view" Content="View" HorizontalAlignment="Left" Margin="25,311,0,0" VerticalAlignment="Top" Height="90" Width="90"
+                Click="btn_view_Click"/>
     </Grid>
 </Window>
